--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -2234,7 +2234,8 @@
         "\n",
         "  wupload=widgets.FileUpload(\n",
         "  accept='.png',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
-        "  multiple=False  # True to accept multiple files upload else False \n",
+        "  multiple=False, # True to accept multiple files upload else False \n",
+        "  button_style='info' \n",
         "  )\n",
         "\n",
         " #####---wimgshowconf---\n",
@@ -3132,7 +3133,8 @@
         "      \n"
       ],
       "metadata": {
-        "id": "uIt2mmMu0uJv"
+        "id": "uIt2mmMu0uJv",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3149,24 +3151,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#from ipywidgets.widgets.widget_upload import ButtonStyle\n",
         "#@markdown **Param Builder**\n",
         "\n",
         "from IPython.display import Javascript\n",
         "from IPython import display\n",
         "import io\n",
         "\n",
-        "\n",
-        "\n",
         "parenv=SimpleNamespace(**InitParams())\n",
         "\n",
         "\n",
-        "#####---imgresult----\n",
-        "\n",
         "global wimgresult\n",
         "global wimgresultretouch\n",
-        "\n",
-        "#def drawimgresult(sender):\n",
         "\n",
         "wimgresult=widgets.Image(\n",
         "width='auto',\n",
@@ -3179,50 +3174,11 @@
         ")\n",
         "\n",
         "\n",
-        "\n",
-        "#####wdrawresult\n",
-        "\n",
-        "# canvas=buildcanvas(512,512)\n",
-        "# wdraw=widgets.HTML(\n",
-        "#     value=canvas,\n",
-        "#     placeholder='',\n",
-        "#     description='',\n",
-        "# )\n",
-        "\n",
         "wimgresultbox=widgets.HBox([wimgresult, wimgresultretouch])\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "display.display(wimgresultbox)\n",
-        "#888\n",
-        "\n",
-        "print (wimgresult.width)\n",
-        "\n",
         "display.display(HTML(canvas_html))\n",
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
-        "\n",
-        "# eval_js(buildnewsource('/content/3.png'))\n",
-        "# eval_js(buildnewmask('/content/33.png'))\n",
-        "# cpaint(canvas,'/content/mask.png')\n",
-        "# eval_js(buildnewsource('/content/4.png'))\n",
-        "# eval_js(delete_mask)\n",
-        "# eval_js(buildnewmask('/content/44.png'))\n",
-        "# cpaint(canvas,'/content/mask.png')\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "jscommand('reset();')\n",
         "\n",
         "\n"
       ],
