--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -742,14 +742,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CIUJ7lWI4v53",
-        "cellView": "code"
+        "id": "CIUJ7lWI4v53"
       },
       "source": [
         "#@markdown **Select and Load Model**\n",
         "\n",
         "model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v1-inference.yaml\"]\n",
-        "model_checkpoint = \"sd-v1-5.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"sd-v1-4.ckpt\",  \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\", \"f222.ckpt\"]\n",
+        "model_checkpoint = \"shpmdl.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"sd-v1-4.ckpt\", \"shpmdl.ckpt\", \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\", \"f222.ckpt\"]\n",
         "custom_config_path = \"\" #@param {type:\"string\"}\n",
         "custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
         "\n",
@@ -768,7 +767,11 @@
         "    \"sd-v1-1.ckpt\": {'sha256': '86cd1d3ccb044d7ba8db743d717c9bac603c4043508ad2571383f954390f3cea'},\n",
         "    \"f111.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
         "    \"sd-v1-5.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
-        "    \"f222.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'}\n",
+        "    \"f222.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
+        "    \"shpmdl.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'}\n",
+        "\n",
+        "\n",
+        "    shpmdl.ckpt\n",
         "\n",
         "# ================================================================================================ #\n",
         "# NOTE: for robo-diffusion to work you must have the words 'nousr' and 'robot' next to each other  #\n",
