--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3219,6 +3219,94 @@
         "from base64 import b64decode\n",
         "#ggg\n",
         "####---wstart---\n",
+        "suboptions=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
+        "\n",
+        "fstart = widgets.Button(\n",
+        "    description='START',\n",
+        "    name='hello',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Click me',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "fresulttoinit = widgets.Button(\n",
+        "    description='r on',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Click me',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "fresulttoinitoff = widgets.Button(\n",
+        "    description='r off',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Click me',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "fshowpaint = widgets.Button(\n",
+        "    description='mask',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Image mask',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "fcacheimg = widgets.Button(\n",
+        "    description='cache',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Save to cache',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "fcommit = widgets.Button(\n",
+        "    description='comit',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Commit changes',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "wblendmode=widgets.Dropdown(\n",
+        "    options=[('Translucent', 1), ('opaque', 2), ('FillMask', 3), ('paint', 4), ('coloredlevels',5), ('tint',6), ('rapid',7)],\n",
+        "    value=1,\n",
+        "    description='',\n",
+        "    layout=widgets.Layout(width='100px')\n",
+        ")\n",
+        "\n",
+        "wsuboptions=widgets.Dropdown(\n",
+        "    options=[('none', 1)],\n",
+        "    value=1,\n",
+        "    description='',\n",
+        "    layout=widgets.Layout(width='100px')\n",
+        ")\n",
+        "\n",
+        "wpaintcolor=widgets.ColorPicker(\n",
+        "    concise=False,\n",
+        "    description='',\n",
+        "    value='black',\n",
+        "    disabled=False,\n",
+        "    layout=widgets.Layout(width='100px')\n",
+        ")\n",
+        "\n",
+        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit, wpaintcolor, wblendmode, wsuboptions])  \n",
+        "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "def abcd(sender):\n",
         "    cpaint2('/content/main_image.png', get_main_image)\n",
         "    cpaint2('/content/mask.png', get_data2)\n",
@@ -3244,113 +3332,36 @@
         "  elif wblendmode.value == 7:\n",
         "    jscommand('blendmode=blendmodes.rapid;')\n",
         " \n",
-        "  # elif dia == 5:\n",
-        "  #   print('viernes')\n",
-        "  # elif dia == 6:\n",
-        "  #   print('sábado')\n",
-        "  # elif dia == 7:\n",
-        "  #   print('domingo')\n",
         "  else:\n",
         "    print('error')\n",
         "\n",
-        "fstart = widgets.Button(\n",
-        "    description='START',\n",
-        "    name='hello',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Click me',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
-        "\n",
-        "fstart.on_click(abcd)\n",
-        "\n",
-        "\n",
-        "\n",
-        "fresulttoinit = widgets.Button(\n",
-        "    description='r on',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Click me',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
-        "\n",
-        "fresulttoinit.on_click(efgh)\n",
-        "\n",
-        "fresulttoinitoff = widgets.Button(\n",
-        "    description='r off',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Click me',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
-        "\n",
-        "\n",
-        "fshowpaint = widgets.Button(\n",
-        "    description='mask',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Image mask',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
+        "  sync_modes()\n",
+        " \n",
         "\n",
         "def fchacheimg_click(sender):\n",
         "    imgcommand('/content/temporal.png', load_img_blend)\n",
         "\n",
-        "fcacheimg = widgets.Button(\n",
-        "    description='cache',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Save to cache',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
-        "\n",
-        "fcacheimg.on_click(fchacheimg_click)\n",
-        "\n",
         "def fcommit_click(sender):\n",
         "  jscommand(commit_changes)\n",
-        "\n",
-        "\n",
-        "fcommit = widgets.Button(\n",
-        "    description='comit',\n",
-        "    disabled=False,\n",
-        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-        "    tooltip='Commit changes',\n",
-        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
-        "    layout=widgets.Layout(width='75px')\n",
-        "    )\n",
-        "\n",
-        "fcommit.on_click(fcommit_click)\n",
-        "\n",
-        "wblendmode=widgets.Dropdown(\n",
-        "    options=[('Translucent', 1), ('opaque', 2), ('FillMask', 3), ('paint', 4), ('coloredlevels',5), ('tint',6), ('rapid',7)],\n",
-        "    value=1,\n",
-        "    description='',\n",
-        "    layout=widgets.Layout(width='100px')\n",
-        ")\n",
-        "\n",
-        "wblendmode.observe(wblendmode_listener, 'value')\n",
         "\n",
         "def wpaintcolor_listener(sender):\n",
         "  jscommand('colorpick=\"' + wpaintcolor.value + '\" ; setcolors();')\n",
         "\n",
-        "wpaintcolor=widgets.ColorPicker(\n",
-        "    concise=False,\n",
-        "    description='',\n",
-        "    value='black',\n",
-        "    disabled=False,\n",
-        "    layout=widgets.Layout(width='100px')\n",
-        ")\n",
+        "def sync_modes():\n",
+        "  wsuboptions.options=suboptions[wblendmode.value - 1]\n",
         "\n",
+        "\n",
+        "\n",
+        "fstart.on_click(abcd)\n",
+        "fresulttoinit.on_click(efgh)\n",
+        "fcacheimg.on_click(fchacheimg_click)\n",
+        "fcommit.on_click(fcommit_click)\n",
+        "wblendmode.observe(wblendmode_listener, 'value')\n",
         "wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
+        "sync_modes()\n",
         "\n",
         "\n",
-        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit, wpaintcolor, wblendmode])  \n",
-        "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
+        "\n",
         "\n",
         "canvas_html = \"\"\"\n",
         "\n",
@@ -4294,8 +4305,7 @@
         "# # # dump(wimage)\n"
       ],
       "metadata": {
-        "id": "B0Cs8RPxo_Jx",
-        "cellView": "form"
+        "id": "B0Cs8RPxo_Jx"
       },
       "execution_count": null,
       "outputs": []
