--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3219,7 +3219,7 @@
         "from base64 import b64decode\n",
         "#ggg\n",
         "####---wstart---\n",
-        "suboptions=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
+        "submodes=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
         "\n",
         "fstart = widgets.Button(\n",
         "    description='START',\n",
@@ -3284,7 +3284,7 @@
         "    layout=widgets.Layout(width='100px')\n",
         ")\n",
         "\n",
-        "wsuboptions=widgets.Dropdown(\n",
+        "wsubmode=widgets.Dropdown(\n",
         "    options=[('none', 1)],\n",
         "    value=1,\n",
         "    description='',\n",
@@ -3299,7 +3299,7 @@
         "    layout=widgets.Layout(width='100px')\n",
         ")\n",
         "\n",
-        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit, wpaintcolor, wblendmode, wsuboptions])  \n",
+        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit, wpaintcolor, wblendmode, wsubmode])  \n",
         "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
         "\n",
         "\n",
@@ -3335,7 +3335,20 @@
         "  else:\n",
         "    print('error')\n",
         "\n",
-        "  sync_modes()\n",
+        "  sync_modes();\n",
+        "\n",
+        "def wsubmode_listener(sender):\n",
+        "  if wsubmode.value == 1:\n",
+        "   jscommand(\"submode=submodes.fromcache; merge(false);\")\n",
+        "  elif wblendmode.value == 2:\n",
+        "    jscommand('submode=submodes.randomnoise; merge(false);')\n",
+        "  elif wblendmode.value == 3:\n",
+        "    jscommand('submode=submodes.scenenoise; merge(false);')\n",
+        " \n",
+        "  else:\n",
+        "    print('error')\n",
+        "  \n",
+        "\n",
         " \n",
         "\n",
         "def fchacheimg_click(sender):\n",
@@ -3348,7 +3361,7 @@
         "  jscommand('colorpick=\"' + wpaintcolor.value + '\" ; setcolors();')\n",
         "\n",
         "def sync_modes():\n",
-        "  wsuboptions.options=suboptions[wblendmode.value - 1]\n",
+        "  wsubmode.options=submodes[wblendmode.value - 1]\n",
         "\n",
         "\n",
         "\n",
@@ -3358,6 +3371,7 @@
         "fcommit.on_click(fcommit_click)\n",
         "wblendmode.observe(wblendmode_listener, 'value')\n",
         "wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
+        "wsubmode.observe(wsubmode_listener, 'value')\n",
         "\n",
         "\n",
         "\n",
@@ -3527,7 +3541,16 @@
         "  rapid: \"rapid\"\n",
         "}\n",
         "\n",
+        "const submodes = {\n",
+        "  fromcache:\"fromcache\",\n",
+        "\trandomnoise: \"randomnoise\",\n",
+        "\tscenenoise: \"scenenoise\"\n",
+        "}\n",
+        "\n",
+        "\n",
+        "var submode=submodes.fromcache;\n",
         "var blendmode=blendmodes.translucid;\n",
+        "\n",
         "var isselector=false;\n",
         "\n",
         "var ctx = canvas.getContext('2d')\n",
@@ -3890,21 +3913,24 @@
         "          {\n",
         "             if (pixels2[i]!==255)\n",
         "              {\n",
-        "                  //pixels[i] =   pixels4[i];\n",
-        "                  //pixels[i+1] = pixels4[i+1];\n",
-        "                  //pixels[i+2] = pixels4[i+2];\n",
-        "                  //pixels[i+3] = 255;\n",
+        "                 mensajes.texContent=submode;\n",
+        "                 if (submode===submodes.fromcache) \n",
+        "                 {\n",
+        "                  var pr=   Math.floor((pixels[i] +  pixels[i+1] +  pixels[i+2]) / 3);\n",
+        "                  pixels[i] =     Math.floor((((1-(1-(pr/255)) * (1-vmod))) * pixels4[i]));\n",
+        "                  pixels[i+1] =   Math.floor((((1-(1-(pr/255)) * (1-vmod)) ) * pixels4[i+1]));\n",
+        "                  pixels[i+2] =   Math.floor((((1-(1-(pr/255)) * (1-vmod)) ) * pixels4[i+2]));\n",
+        "                  pixels[i+3] = 255;\n",
+        "                 }\n",
         "\n",
-        "                 //pixels[i] =    (Math.floor((vmod * ~pixels[i] * pixels4[i]) / 255));\n",
-        "                 //pixels[i+1] =  (Math.floor((vmod * ~pixels4[i+1] * pixels4[i+1]) / 255));\n",
-        "                 //pixels[i+2] =  (Math.floor((vmod * ~pixels4[i+2] * pixels4[i+2]) / 255)); \n",
-        "                 //pixels[i+3] = 255;\n",
-        "\n",
-        "                 var pr=   Math.floor((pixels[i] +  pixels[i+1] +  pixels[i+2]) / 3);\n",
-        "                 pixels[i] =     Math.floor((((1-(1-(pr/255)) * (1-vmod))) * pixels4[i]));\n",
-        "                 pixels[i+1] =   Math.floor((((1-(1-(pr/255)) * (1-vmod)) ) * pixels4[i+1]));\n",
-        "                 pixels[i+2] =   Math.floor((((1-(1-(pr/255)) * (1-vmod)) ) * pixels4[i+2]));\n",
-        "                 pixels[i+3] = 255;\n",
+        "                  if (submode===submodes.randomnoise) \n",
+        "                 {\n",
+        "                \n",
+        "                  pixels[i] =    0;\n",
+        "                  pixels[i+1] =  0;\n",
+        "                  pixels[i+2] =   0;\n",
+        "                  pixels[i+3] = 255;\n",
+        "                 }\n",
         "\n",
         "              }\n",
         "      \n",
@@ -4042,6 +4068,10 @@
         "     }\n",
         "\n",
         "};\n",
+        "\n",
+        "function getrndinteger(min, max) {\n",
+        "  return Math.floor(Math.random() * (max - min + 1) ) + min;\n",
+        "}\n",
         "\n",
         "const getmaincanvas = () => {\n",
         "\n",
@@ -4228,7 +4258,7 @@
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
         "imgcommand('/content/main1.png',reload_source)\n",
         "imgcommand('/content/mask11.png',reload_mask)\n",
-        "imgcommand('/content/noise.png', load_img_cache)\n",
+        "imgcommand('/content/cache1.png', load_img_cache)\n",
         "# vwidth=jscommand(getwidth)\n",
         "# print (vwidth)\n",
         "\n",
