--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3340,9 +3340,9 @@
         "def wsubmode_listener(sender):\n",
         "  if wsubmode.value == 1:\n",
         "   jscommand(\"submode=submodes.fromcache; merge(false);\")\n",
-        "  elif wblendmode.value == 2:\n",
+        "  elif wsubmode.value == 2:\n",
         "    jscommand('submode=submodes.randomnoise; merge(false);')\n",
-        "  elif wblendmode.value == 3:\n",
+        "  elif wsubmode.value == 3:\n",
         "    jscommand('submode=submodes.scenenoise; merge(false);')\n",
         " \n",
         "  else:\n",
@@ -3913,7 +3913,7 @@
         "          {\n",
         "             if (pixels2[i]!==255)\n",
         "              {\n",
-        "                 mensajes.texContent=submode;\n",
+        "                 mensajes.textContent=submode.toString();\n",
         "                 if (submode===submodes.fromcache) \n",
         "                 {\n",
         "                  var pr=   Math.floor((pixels[i] +  pixels[i+1] +  pixels[i+2]) / 3);\n",
@@ -3926,9 +3926,9 @@
         "                  if (submode===submodes.randomnoise) \n",
         "                 {\n",
         "                \n",
-        "                  pixels[i] =    0;\n",
-        "                  pixels[i+1] =  0;\n",
-        "                  pixels[i+2] =   0;\n",
+        "                  pixels[i] =     Math.floor(getrndinteger(0,255) * (vmod));\n",
+        "                  pixels[i+1] =   Math.floor(getrndinteger(0,255) * (vmod));\n",
+        "                  pixels[i+2] =   Math.floor(getrndinteger(0,255) * (vmod));\n",
         "                  pixels[i+3] = 255;\n",
         "                 }\n",
         "\n",
