--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3219,7 +3219,7 @@
         "from base64 import b64decode\n",
         "#ggg\n",
         "####---wstart---\n",
-        "submodes=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
+        "submodes=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3), ('color noise', 4)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
         "\n",
         "fstart = widgets.Button(\n",
         "    description='START',\n",
@@ -3344,6 +3344,8 @@
         "    jscommand('submode=submodes.randomnoise; merge(false);')\n",
         "  elif wsubmode.value == 3:\n",
         "    jscommand('submode=submodes.scenenoise; merge(false);')\n",
+        "  elif wsubmode.value == 4:\n",
+        "    jscommand('submode=submodes.colornoise; merge(false);')\n",
         " \n",
         "  else:\n",
         "    print('error')\n",
@@ -3477,6 +3479,7 @@
         "var paintcolor=\"#000000\";\n",
         "var translucidcolor=\"#FF0000\";\n",
         "var opaquecolor=\"#FF0000\";\n",
+        "var fillcolor=\"#00FF00\";\n",
         "\n",
         "\n",
         "const setcolors = () => {\n",
@@ -3484,6 +3487,8 @@
         "  if (blendmode===blendmodes.paint || blendmode===blendmodes.tint ) paintcolor=colorpick;\n",
         "  if (blendmode===blendmodes.opaque) opaquecolor=colorpick;\n",
         "  if (blendmode===blendmodes.translucid) translucidcolor=colorpick;\n",
+        "  if (blendmode===blendmodes.fillmask) fillcolor=colorpick;\n",
+        "\n",
         "  merge(false);\n",
         "\n",
         "}\n",
@@ -3544,7 +3549,8 @@
         "const submodes = {\n",
         "  fromcache:\"fromcache\",\n",
         "\trandomnoise: \"randomnoise\",\n",
-        "\tscenenoise: \"scenenoise\"\n",
+        "\tscenenoise: \"scenenoise\",\n",
+        "  colornoise: \"colornoise\"\n",
         "}\n",
         "\n",
         "\n",
@@ -3907,6 +3913,9 @@
         "\n",
         "if (blendmode===blendmodes.fillmask)\n",
         "   {\n",
+        "        var rc1 = parseInt(fillcolor.slice(1, 3), 16);\n",
+        "        var gc1 = parseInt(fillcolor.slice(3, 5), 16);\n",
+        "        var bc1 = parseInt(fillcolor.slice(5, 7), 16);\n",
         "        isselector=false;\n",
         "        for (let i = 0; i < pixels.length; i += 4) \n",
         "        \n",
@@ -3931,6 +3940,18 @@
         "                  pixels[i+2] =   Math.floor(getrndinteger(0,255) * (vmod));\n",
         "                  pixels[i+3] = 255;\n",
         "                 }\n",
+        "\n",
+        "                 if (submode===submodes.colornoise) \n",
+        "                 {\n",
+        "                \n",
+        "                  pixels[i] =     Math.floor(getrndinteger(0,rc1) + (vmod));\n",
+        "                  pixels[i+1] =   Math.floor(getrndinteger(0,gc1) * (vmod));\n",
+        "                  pixels[i+2] =   Math.floor(getrndinteger(0,bc1) * (vmod));\n",
+        "                  pixels[i+3] = 255;\n",
+        "\n",
+        "                 }\n",
+        "\n",
+        "\n",
         "\n",
         "              }\n",
         "      \n",
