--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3276,6 +3276,17 @@
         "    layout=widgets.Layout(width='75px')\n",
         "    )\n",
         "\n",
+        "frestore = widgets.Button(\n",
+        "    description='restore',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Restore last commit',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "wblendmode=widgets.Dropdown(\n",
         "    options=[('Translucent', 1), ('opaque', 2), ('FillMask', 3), ('paint', 4), ('coloredlevels',5), ('tint',6), ('rapid',7)],\n",
@@ -3299,7 +3310,7 @@
         "    layout=widgets.Layout(width='100px')\n",
         ")\n",
         "\n",
-        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit, wpaintcolor, wblendmode, wsubmode])  \n",
+        "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit,frestore, wpaintcolor, wblendmode, wsubmode])  \n",
         "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
         "\n",
         "\n",
@@ -3359,6 +3370,9 @@
         "def fcommit_click(sender):\n",
         "  jscommand(commit_changes)\n",
         "\n",
+        "def frestore_click(sender):\n",
+        "  jscommand(restore_commit)\n",
+        "\n",
         "def wpaintcolor_listener(sender):\n",
         "  jscommand('colorpick=\"' + wpaintcolor.value + '\" ; setcolors();')\n",
         "\n",
@@ -3371,6 +3385,7 @@
         "fresulttoinit.on_click(efgh)\n",
         "fcacheimg.on_click(fchacheimg_click)\n",
         "fcommit.on_click(fcommit_click)\n",
+        "frestore.on_click(frestore_click)\n",
         "wblendmode.observe(wblendmode_listener, 'value')\n",
         "wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
         "wsubmode.observe(wsubmode_listener, 'value')\n",
@@ -3444,6 +3459,8 @@
         "<canvas id=\"canvas6\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\" hidden></canvas>\n",
         "<!--Solid paint canvas-->\n",
         "<canvas id=\"canvas7\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\" hidden></canvas>\n",
+        "<!--Restore canvas-->\n",
+        "<canvas id=\"canvas8\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\"></canvas>\n",
         "<p>__________________________________</p>  \n",
         "<p id=\"mensajes\">Mensajes de salida</p>\n",
         "<p>__________________________________</p>\n",
@@ -3459,6 +3476,7 @@
         "var canvas5= document.getElementById('canvas5')\n",
         "var canvas6= document.getElementById('canvas6')\n",
         "var canvas7= document.getElementById('canvas7')\n",
+        "var canvas8= document.getElementById('canvas8')\n",
         "var vimgbuffer= document.getElementById('imgbuffer')\n",
         "var vimgbuffer2= document.getElementById('imgbuffer2')\n",
         "var mensajes = document.getElementById('mensajes')\n",
@@ -3509,6 +3527,8 @@
         "  canvas6.setAttribute(\"height\", hh);\n",
         "  canvas7.setAttribute(\"width\", ww);\n",
         "  canvas7.setAttribute(\"height\", hh);\n",
+        "  canvas8.setAttribute(\"width\", ww);\n",
+        "  canvas8.setAttribute(\"height\", hh);\n",
         "  imgbuffer.setAttribute(\"width\", ww);\n",
         "  imgbuffer.setAttribute(\"height\", hh);\n",
         "  imgbuffer2.setAttribute(\"width\", ww);\n",
@@ -3521,6 +3541,7 @@
         "  ctx5.imageSmoothingEnabled=false;\n",
         "  ctx6.imageSmoothingEnabled=false;\n",
         "  ctx7.imageSmoothingEnabled=false;\n",
+        "  ctx8.imageSmoothingEnabled=false;\n",
         "  }\n",
         "\n",
         "  const reset = () => {\n",
@@ -3533,6 +3554,8 @@
         "  ctx6.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "  ctx7.fillStyle = 'white';\n",
         "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx8.fillStyle = 'white';\n",
+        "  ctx8.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "\n",
         "}\n",
         "\n",
@@ -3566,6 +3589,7 @@
         "var ctx5= canvas5.getContext('2d')\n",
         "var ctx6 = canvas6.getContext('2d')\n",
         "var ctx7 = canvas7.getContext('2d')\n",
+        "var ctx8 = canvas8.getContext('2d')\n",
         "\n",
         "\n",
         "var mousebutton=0;\n",
@@ -4183,7 +4207,17 @@
         "\n",
         "commit_changes=\"\"\"\n",
         "\n",
+        "ctx8.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "vimgbuffer.setAttribute('src', canvas.toDataURL('image/png'));\n",
+        "\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "restore_commit=\"\"\"\n",
+        "\n",
+        "vimgbuffer.setAttribute('src', canvas8.toDataURL('image/png'));\n",
+        "ctx.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "\n",
         "\"\"\"\n",
         "\n",
@@ -4277,6 +4311,7 @@
         "display.display(HTML(canvas_html))\n",
         "sync_modes()\n",
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
+        "jscommand('reset();')\n",
         "imgcommand('/content/main1.png',reload_source)\n",
         "imgcommand('/content/mask11.png',reload_mask)\n",
         "imgcommand('/content/cache1.png', load_img_cache)\n",
