--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -1983,8 +1983,7 @@
         "  \n"
       ],
       "metadata": {
-        "id": "xig0jyRsEUMB",
-        "cellView": "form"
+        "id": "xig0jyRsEUMB"
       },
       "execution_count": null,
       "outputs": []
@@ -3209,6 +3208,7 @@
     {
       "cell_type": "code",
       "source": [
+        ", fix\n",
         "#@title Texto de título predeterminado\n",
         "\n",
         "from IPython.display import HTML, Image\n",
@@ -3285,6 +3285,24 @@
         "    layout=widgets.Layout(width='75px')\n",
         "    )\n",
         "\n",
+        "ffix = widgets.Button(\n",
+        "    description='Fix',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Fix changes',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
+        "ffixrestore = widgets.Button(\n",
+        "    description='fix undo',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Restore last fix',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -3312,6 +3330,8 @@
         "\n",
         "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit,frestore, wpaintcolor, wblendmode, wsubmode])  \n",
         "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
+        "wthirdline= widgets.HBox([ffix, ffixrestore ])\n",
+        "display.display(wthirdline)\n",
         "\n",
         "\n",
         "\n",
@@ -3373,6 +3393,12 @@
         "def frestore_click(sender):\n",
         "  jscommand(restore_commit)\n",
         "\n",
+        "def ffix_click(sender):\n",
+        "  jscommand(fix_changes)\n",
+        "\n",
+        "def ffixrestore_click(sender):\n",
+        "  jscommand(restore_fix)\n",
+        "\n",
         "def wpaintcolor_listener(sender):\n",
         "  jscommand('colorpick=\"' + wpaintcolor.value + '\" ; setcolors();')\n",
         "\n",
@@ -3386,6 +3412,8 @@
         "fcacheimg.on_click(fchacheimg_click)\n",
         "fcommit.on_click(fcommit_click)\n",
         "frestore.on_click(frestore_click)\n",
+        "ffix.on_click(ffix_click)\n",
+        "ffixrestore.on_click(ffixrestore_click)\n",
         "wblendmode.observe(wblendmode_listener, 'value')\n",
         "wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
         "wsubmode.observe(wsubmode_listener, 'value')\n",
@@ -3460,7 +3488,9 @@
         "<!--Solid paint canvas-->\n",
         "<canvas id=\"canvas7\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\" hidden></canvas>\n",
         "<!--Restore canvas-->\n",
-        "<canvas id=\"canvas8\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\"></canvas>\n",
+        "<canvas id=\"canvas8\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\" hidden></canvas>\n",
+        "<!--Fix canvas-->\n",
+        "<canvas id=\"canvas9\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\"></canvas>\n",
         "<p>__________________________________</p>  \n",
         "<p id=\"mensajes\">Mensajes de salida</p>\n",
         "<p>__________________________________</p>\n",
@@ -3477,6 +3507,7 @@
         "var canvas6= document.getElementById('canvas6')\n",
         "var canvas7= document.getElementById('canvas7')\n",
         "var canvas8= document.getElementById('canvas8')\n",
+        "var canvas9= document.getElementById('canvas9')\n",
         "var vimgbuffer= document.getElementById('imgbuffer')\n",
         "var vimgbuffer2= document.getElementById('imgbuffer2')\n",
         "var mensajes = document.getElementById('mensajes')\n",
@@ -3529,6 +3560,8 @@
         "  canvas7.setAttribute(\"height\", hh);\n",
         "  canvas8.setAttribute(\"width\", ww);\n",
         "  canvas8.setAttribute(\"height\", hh);\n",
+        "  canvas9.setAttribute(\"width\", ww);\n",
+        "  canvas9.setAttribute(\"height\", hh);\n",
         "  imgbuffer.setAttribute(\"width\", ww);\n",
         "  imgbuffer.setAttribute(\"height\", hh);\n",
         "  imgbuffer2.setAttribute(\"width\", ww);\n",
@@ -3542,6 +3575,7 @@
         "  ctx6.imageSmoothingEnabled=false;\n",
         "  ctx7.imageSmoothingEnabled=false;\n",
         "  ctx8.imageSmoothingEnabled=false;\n",
+        "  ctx9.imageSmoothingEnabled=false;\n",
         "  }\n",
         "\n",
         "  const reset = () => {\n",
@@ -3556,6 +3590,8 @@
         "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "  ctx8.fillStyle = 'white';\n",
         "  ctx8.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx9.fillStyle = 'white';\n",
+        "  ctx9.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "\n",
         "}\n",
         "\n",
@@ -3590,6 +3626,7 @@
         "var ctx6 = canvas6.getContext('2d')\n",
         "var ctx7 = canvas7.getContext('2d')\n",
         "var ctx8 = canvas8.getContext('2d')\n",
+        "var ctx9 = canvas9.getContext('2d')\n",
         "\n",
         "\n",
         "var mousebutton=0;\n",
@@ -4220,6 +4257,26 @@
         "ctx.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "\n",
         "\"\"\"\n",
+        "\n",
+        "fix_changes=\"\"\"\n",
+        "\n",
+        "ctx9.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
+        "vimgbuffer.setAttribute('src', canvas.toDataURL('image/png'));\n",
+        "\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "restore_fix=\"\"\"\n",
+        "\n",
+        "vimgbuffer.setAttribute('src', canvas9.toDataURL('image/png'));\n",
+        "ctx.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "reload_source=\"\"\"\n",
