--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -1260,7 +1260,7 @@
         "  ctx7.imageSmoothingEnabled=false;\n",
         "  }\n",
         "\n",
-        "  const reset = () => {\n",
+        "  const init_masks = () => {\n",
         "\n",
         "  ctx2.fillStyle = 'white';\n",
         "  ctx2.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
@@ -2616,7 +2616,7 @@
         "    vheight=jscommand(getheight)\n",
         "    if (ww.value!=vwidth or wh.value!=vheight):\n",
         "      jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
-        "      jscommand('reset();')\n",
+        "      jscommand('init_masks();')\n",
         "  \n",
         "\n",
         "    if (winitstate.value): \n",
@@ -3136,7 +3136,8 @@
         "      \n"
       ],
       "metadata": {
-        "id": "uIt2mmMu0uJv"
+        "id": "uIt2mmMu0uJv",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -3180,7 +3181,7 @@
         "display.display(wimgresultbox)\n",
         "display.display(HTML(canvas_html))\n",
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
-        "jscommand('reset();')\n",
+        "jscommand('init_masks();')\n",
         "\n",
         "\n"
       ],
@@ -3578,7 +3579,18 @@
         "  ctx9.imageSmoothingEnabled=false;\n",
         "  }\n",
         "\n",
-        "  const reset = () => {\n",
+        "  const init_masks = () => {\n",
+        "\n",
+        "  reset_masks();\n",
+        "\n",
+        "  ctx8.fillStyle = 'white';\n",
+        "  ctx8.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "  ctx9.fillStyle = 'white';\n",
+        "  ctx9.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        "\n",
+        "}\n",
+        "\n",
+        "const reset_masks = () => {\n",
         "\n",
         "  ctx2.fillStyle = 'white';\n",
         "  ctx2.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
@@ -3588,10 +3600,7 @@
         "  ctx6.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
         "  ctx7.fillStyle = 'white';\n",
         "  ctx7.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
-        "  ctx8.fillStyle = 'white';\n",
-        "  ctx8.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
-        "  ctx9.fillStyle = 'white';\n",
-        "  ctx9.fillRect( 0, 0, canvas2.width, canvas2.height)\n",
+        " \n",
         "\n",
         "}\n",
         "\n",
@@ -4246,6 +4255,7 @@
         "\n",
         "ctx8.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "vimgbuffer.setAttribute('src', canvas.toDataURL('image/png'));\n",
+        "reset_masks();\n",
         "\n",
         "\n",
         "\n",
@@ -4256,12 +4266,14 @@
         "vimgbuffer.setAttribute('src', canvas8.toDataURL('image/png'));\n",
         "ctx.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "\n",
+        "\n",
         "\"\"\"\n",
         "\n",
         "fix_changes=\"\"\"\n",
         "\n",
         "ctx9.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
         "vimgbuffer.setAttribute('src', canvas.toDataURL('image/png'));\n",
+        "reset_masks();\n",
         "\n",
         "\n",
         "\n",
@@ -4271,6 +4283,7 @@
         "\n",
         "vimgbuffer.setAttribute('src', canvas9.toDataURL('image/png'));\n",
         "ctx.drawImage(vimgbuffer, 0, 0, canvas1.width, canvas1.height);\n",
+        "\n",
         "\n",
         "\"\"\"\n",
         "\n",
@@ -4368,7 +4381,7 @@
         "display.display(HTML(canvas_html))\n",
         "sync_modes()\n",
         "jscommand('prepare(\"%d\",\"%d\");' % (512,512))\n",
-        "jscommand('reset();')\n",
+        "jscommand('init_masks();')\n",
         "imgcommand('/content/main1.png',reload_source)\n",
         "imgcommand('/content/mask11.png',reload_mask)\n",
         "imgcommand('/content/cache1.png', load_img_cache)\n",
