--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -3160,6 +3160,7 @@
         "from IPython import display\n",
         "import io\n",
         "\n",
+        "\n",
         "parenv=SimpleNamespace(**InitParams())\n",
         "\n",
         "\n",
@@ -3209,7 +3210,7 @@
     {
       "cell_type": "code",
       "source": [
-        ", fix\n",
+        "%%script echo\n",
         "#@title Texto de título predeterminado\n",
         "\n",
         "from IPython.display import HTML, Image\n",
@@ -3218,9 +3219,13 @@
         "import base64\n",
         "from base64 import b64encode\n",
         "from base64 import b64decode\n",
+        "import os\n",
         "#ggg\n",
         "####---wstart---\n",
-        "submodes=[[('test1', 1),('test2',2), ('test3',3)], [('none', 0)], [('cache', 1),('random noise',2), ('scene noise',3), ('color noise', 4)], [('none', 0)], [('none', 0)], [('none', 0)], [('none', 0)]]\n",
+        "submodes=[[('none', 1)], [('none', 1)], [('cache', 1),('random noise',2), ('scene noise',3), ('color noise', 4)], [('none', 1)], [('none', 1)], [('none', 1)], [('none', 1)]]\n",
+        "temporal_path= \"/content/localwork\" \n",
+        "compimage='compimage.png'\n",
+        "\n",
         "\n",
         "fstart = widgets.Button(\n",
         "    description='START',\n",
@@ -3304,7 +3309,14 @@
         "    layout=widgets.Layout(width='75px')\n",
         "    )\n",
         "\n",
-        "\n",
+        "wsavecomposer = widgets.Button(\n",
+        "    description='Save',\n",
+        "    disabled=False,\n",
+        "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+        "    tooltip='Save composer',\n",
+        "    icon='check', # (FontAwesome names without the `fa-` prefix)\n",
+        "    layout=widgets.Layout(width='75px')\n",
+        "    )\n",
         "\n",
         "\n",
         "wblendmode=widgets.Dropdown(\n",
@@ -3331,7 +3343,7 @@
         "\n",
         "fui_start_wresulttoinit_wresultoinitoff = widgets.HBox([fstart, fresulttoinit, fresulttoinitoff, fshowpaint, fcacheimg, fcommit,frestore, wpaintcolor, wblendmode, wsubmode])  \n",
         "display.display(fui_start_wresulttoinit_wresultoinitoff) \n",
-        "wthirdline= widgets.HBox([ffix, ffixrestore ])\n",
+        "wthirdline= widgets.HBox([ffix, ffixrestore, wsavecomposer ])\n",
         "display.display(wthirdline)\n",
         "\n",
         "\n",
@@ -3406,6 +3418,10 @@
         "def sync_modes():\n",
         "  wsubmode.options=submodes[wblendmode.value - 1]\n",
         "\n",
+        "def wsavecomposer_click(sender):\n",
+        "  cpaint2(os.path.join(temporal_path, compimage),get_main_image)\n",
+        "  jscommand('merge(false);')\n",
+        "\n",
         "\n",
         "\n",
         "fstart.on_click(abcd)\n",
@@ -3415,6 +3431,7 @@
         "frestore.on_click(frestore_click)\n",
         "ffix.on_click(ffix_click)\n",
         "ffixrestore.on_click(ffixrestore_click)\n",
+        "wsavecomposer.on_click(wsavecomposer_click)\n",
         "wblendmode.observe(wblendmode_listener, 'value')\n",
         "wpaintcolor.observe(wpaintcolor_listener, 'value')\n",
         "wsubmode.observe(wsubmode_listener, 'value')\n",
