--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -1176,7 +1176,7 @@
         "<!--Compositor canvas-->\n",
         "<canvas id=\"canvas1\" width=\"0\" height=\"0\" oncontextmenu=\"event.preventDefault();\" style=\"border: 1px solid black\"></canvas>\n",
         "<!--Mask canvas-->\n",
-        "<canvas id=\"canvas2\" width=\"0\" height=\"0\" style=\"border: 1px solid black\" hidden></canvas>\n",
+        "<canvas id=\"canvas2\" width=\"0\" height=\"0\" style=\"border: 1px solid black\"></canvas>\n",
         "<!--Solid mask canvas-->\n",
         "<canvas id=\"canvas3\" width=\"0\"  height=\"0\"  style=\"border: 1px solid black\" hidden></canvas>\n",
         "<!--Cache canvas-->\n",
@@ -2756,6 +2756,7 @@
         "      vheight=jscommand(getheight)\n",
         "      if (ww.value!=vwidth or wh.value!=vheight):\n",
         "          jscommand('prepare(\"%d\",\"%d\");' % (ww.value,wh.value))\n",
+        "          jscommand('init_masks();')\n",
         "   else:\n",
         "      jscommand('mensajes.textContent=\"Image without config params!!')\n",
         "\n",
