--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -48,8 +48,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TxIOPT0G5Lx1",
-        "cellView": "form"
+        "id": "TxIOPT0G5Lx1"
       },
       "source": [
         "#@markdown **Model and Output Paths**\n",
@@ -742,14 +741,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CIUJ7lWI4v53",
-        "cellView": "form"
+        "id": "CIUJ7lWI4v53"
       },
       "source": [
         "#@markdown **Select and Load Model**\n",
         "\n",
         "model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v1-inference.yaml\"]\n",
-        "model_checkpoint = \"sd-v1-5.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"sd-v1-4.ckpt\", \"shpmdl.ckpt\", \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\", \"f222.ckpt\"]\n",
+        "model_checkpoint = \"dreamlike-diffusion-1.0.ckpt\" #@param [\"custom\", \"sd-v1-4-full-ema.ckpt\", \"dreamlike-diffusion-1.0.ckpt\",  \"sd-v1-4.ckpt\", \"shpmdl.ckpt\", \"sd-v1-5.ckpt\", \"sd-v1-3-full-ema.ckpt\", \"sd-v1-3.ckpt\", \"sd-v1-2-full-ema.ckpt\", \"sd-v1-2.ckpt\", \"sd-v1-1-full-ema.ckpt\", \"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\", \"f111.ckpt\", \"f222.ckpt\"]\n",
         "custom_config_path = \"\" #@param {type:\"string\"}\n",
         "custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
         "\n",
@@ -769,7 +767,8 @@
         "    \"f111.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
         "    \"sd-v1-5.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
         "    \"f222.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
-        "    \"shpmdl.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'}\n",
+        "    \"shpmdl.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'},\n",
+        "    \"dreamlike-diffusion-1.0.ckpt\": {'sha256': '244dbe0dcb55c761bde9c2ac0e9b46cc9705ebfe5f1f3a7cc46251573ea14e16'}\n",
         "\n",
         "\n",
         "\n",
