--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -48,7 +48,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TxIOPT0G5Lx1"
+        "id": "TxIOPT0G5Lx1",
+        "cellView": "form"
       },
       "source": [
         "#@markdown **Model and Output Paths**\n",
@@ -188,7 +189,7 @@
         "from ldm.util import instantiate_from_config\n",
         "from ldm.models.diffusion.ddim import DDIMSampler\n",
         "from ldm.models.diffusion.plms import PLMSSampler\n",
-        "from midas.dpt_depth import DPTDepthModel\n",
+        "#from midas.dpt_depth import DPTDepthModel\n",
         "from midas.transforms import Resize, NormalizeImage, PrepareForNet\n",
         "\n",
         "#123\n",
@@ -741,7 +742,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CIUJ7lWI4v53"
+        "id": "CIUJ7lWI4v53",
+        "cellView": "form"
       },
       "source": [
         "#@markdown **Select and Load Model**\n",
