--- a/Pro_Deforum_Stable_Diffusion.ipynb
+++ b/Pro_Deforum_Stable_Diffusion.ipynb
@@ -742,8 +742,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CIUJ7lWI4v53",
-        "cellView": "form"
+        "id": "CIUJ7lWI4v53"
       },
       "source": [
         "#@markdown **Select and Load Model**\n",
@@ -3393,7 +3392,7 @@
       "cell_type": "code",
       "source": [
         "#@markdown **Purge RAM**\n",
-        "Enable_Clean=False #@param {type:\"boolean\"}\n",
+        "Enable_Clean=True #@param {type:\"boolean\"}\n",
         "if Enable_Clean: \n",
         "  torch.cuda.empty_cache()"
       ],
